--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vue-tsc && vite build",
+        "build": "vue-tsc && vite build --base ${npm_config_base}",
         "preview": "vite preview",
         "test": "vitest",
         "coverage": "vitest run --coverage"
