--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,10 +30,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             # buildで用いるowner名、repository名の設定
-            - id: set-env
+            - name: set-env
               run: |
                   echo "GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
-                  echo "GITHUB_REPOSITORY=${{ github.repository }}" >> $GITHUB_ENV
+                  echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
             - name: Checkout
               uses: actions/checkout@v3
             - name: build
