--- a/_.github/workflows/static.yml
+++ b/_.github/workflows/static.yml
@@ -33,14 +33,13 @@ jobs:
             - name: set-env
               run: |
                   echo "GITHUB_REPOSITORY_OWNER=${{ github.repository_owner }}" >> $GITHUB_ENV
-                  echo "GITHUB_REPOSITORY=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
+                  echo "GITHUB_REPOSITORY_NAME=${GITHUB_REPOSITORY#${GITHUB_REPOSITORY_OWNER}/}" >> $GITHUB_ENV
             - name: Checkout
               uses: actions/checkout@v3
             - name: build
               run: |
-                  echo "https://${{ env.GITHUB_REPOSITORY_OWNER }}.github.io/${{ env.GITHUB_REPOSITORY }}/"
                   npm install
-                  npm run build -base=https://${{ env.GITHUB_REPOSITORY_OWNER }}.github.io/${{ env.GITHUB_REPOSITORY }}/
+                  npm run build -base=https://${{ env.GITHUB_REPOSITORY_OWNER }}.github.io/${{ env.GITHUB_REPOSITORY_NAME }}/
             - name: Setup Pages
               uses: actions/configure-pages@v3
             - name: Upload artifact
